@@ -34,8 +34,7 @@
 #include <openvas/misc/kb.h>         /* for struct kb_item */
 #include <openvas/misc/arglists.h>   /* for struct arglist */
 
-char *requirements_plugin (kb_t, struct scheduler_plugin *,
-                           struct arglist *);
+char *requirements_plugin (kb_t, struct scheduler_plugin *, struct arglist *);
 
 int mandatory_requirements_met (kb_t, struct scheduler_plugin *);
 
